# emojit

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yaml  generate-site.yaml  generate-site.yml
src/app/: app.py  log.py
src/app/animations/: hue_shift.py  rainbow.py  rotate.py  siren.py
src/site/: index.html  index.local.html
